fix section footer repo link alignment

--- a/src/css/section.css
+++ b/src/css/section.css
@@ -307,7 +307,9 @@ main h2:first-child {
 .pagenav .prev .icon {
   left: 0;
 }
-.pagenav .next {
+.pagenav .next,
+.pagenav .repo {
+  flex: auto;
   text-align: right;
 }
 .pagenav .next .icon {
@@ -317,7 +319,6 @@ main h2:first-child {
   padding-left: var(--icon-width);
 }
 .pagenav .next {
-  flex: auto;
   padding-right: var(--icon-width);
 }
 .pagenav .sep,
